force-app/main/default/objects/GrupoAcessorios__c/GrupoAcessorios__c.object-meta.xml
<CustomObject>
    <label>Grupo de Acessórios</label>
    <nameField>
        <label>Nome do Grupo de Acessórios</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grupo de Acessórios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>