force-app/main/default/objects/GrupoAcessorios__c/fields/AcaoGrupo__c.field-meta.xml
<CustomField>
    <fullName>AcaoGrupo__c</fullName>
    <label>Ação do Grupo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incluido</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Listar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>