force-app/main/default/objects/GrupoAcessorios__c/fields/KitAcessorios__c.field-meta.xml
<CustomField>
    <fullName>KitAcessorios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit de Acessórios</label>
    <referenceTo>KitAcessorios__c</referenceTo>
    <relationshipLabel>Grupo de Acessórios</relationshipLabel>
    <relationshipName>KitAcessorios</relationshipName>
    <type>Lookup</type>
</CustomField>