force-app/main/default/objects/GrupoAcessorios__c/fields/NumeroMinimoAcessorios__c.field-meta.xml
<CustomField>
    <fullName>NumeroMinimoAcessorios__c</fullName>
    <label>Número mínimo de Acessórios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>